--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             </div>
         </div>
         <div id="complete" class="hide">
-            <h3 id="complete-msg">Sva pitanja odgovorena su unutar zadanog vremena.</h3>
+            <img src="assets/images/snoopy.gif" style="display: block; margin-left: auto; margin-right: auto; width: 300px; border-radius: 10px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+            <h3 style="margin-top:50px;" id="complete-msg">Sva pitanja odgovorena su unutar zadanog vremena.</h3>
             <p id="complete-p">Rezultat: <strong><span id="user-score">0</span></strong><span id="user-score-msg"></span></p>
         </div>
     </div> 
